--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,40 +1,445 @@
 @font-face {
-  font-family: "inter";
-  src: url(../fonts/Inter/Inter-VariableFont_slnt\,wght.ttf);
+  font-family: "Inter";
+  src: url("../fonts/Inter-SemiBold.ttf");
 }
 @font-face {
-  font-family: "worksans";
-  src: url(../fonts/Inter/static/Inter-Regular.ttf);
+  font-family: "WorkSans";
+  src: url("../fonts/WorkSans-VariableFont_wght.ttf");
 }
-/* ========== GLOBAL STYLES ========== */
-* {
-  margin: 0;
-  padding: 0;
-  font-weight: 900;
-  text-decoration: none;
-}
-
-p {
-  font-family: worksans;
-  color: #ffffff;
-}
-
-h4, h1 {
-  font-family: inter;
-  color: #ffffff;
-}
-
-.sec1__story, header, footer {
+button {
+  font-family: "WorkSans";
+  font-size: 1.2rem;
+  color: #EEEEEE;
+  max-width: 100%;
+  border: 1px solid white;
+  padding: 1% 3%;
   background-color: black;
 }
 
-.article, .sec1__story, header, footer {
-  font-size: 2em;
-  color: #ffffff;
+button:hover {
+  color: black;
+  border: 1px solid black;
+  background-color: white;
+}
+
+@keyframes movebanner {
+  0% {
+    transform: translateX(100%);
+  }
+  50% {
+    transform: translateX(-10%);
+  }
+  100% {
+    transform: translateX(100%);
+  }
+}
+@keyframes rotate {
+  0% {
+    transform: rotate(0);
+  }
+  50% {
+    transform: rotate(360deg);
+  }
+  100% {
+    transform: rotate(0);
+  }
+}
+html {
+  scroll-behavior: smooth;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+header {
+  width: 100vw;
+  height: 100vh;
   background-color: black;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
+}
+header .hero {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  margin: 0 auto;
   align-items: center;
+}
+header .hero .line {
+  width: 1px;
+  height: 20vh;
+  background-color: white;
+  margin-bottom: 5%;
+}
+header .hero h1 {
+  font-family: "Inter";
+  font-size: 7rem;
+  color: white;
+  max-width: 70%;
+  text-align: center;
+  line-height: 6rem;
+}
+header .hero p {
+  font-family: "WorkSans";
+  font-size: 0.8rem;
+  color: white;
+  max-width: 70%;
+  text-align: center;
+}
+header .hero span {
+  text-shadow: 0 0 2px white, 0 0 2px white, 0 0 2px white, 0 0 2px white;
+  color: black;
+}
+header nav {
+  display: flex;
+  justify-content: space-between;
+  padding: 5% 5%;
+}
+
+.intro {
+  background-color: black;
+  width: 100vw;
+  padding: 5%;
+}
+.intro h2 {
+  font-family: "Inter";
+  font-size: 6rem;
+  color: white;
+  max-width: 80%;
+}
+
+.more {
+  width: 100vw;
+  background-color: black;
+  padding: 0 5%;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  gap: 10%;
+  padding-bottom: 5%;
+}
+.more .facts h2 {
+  font-family: "Inter";
+  font-size: 6rem;
+  color: white;
+  max-width: 80%;
+  padding-bottom: 2%;
+}
+.more .facts p {
+  font-family: "WorkSans";
+  font-size: 0.8rem;
+  color: white;
+  max-width: 70%;
+}
+.more img {
+  width: 30%;
+  height: auto;
+}
+
+.fotos {
+  position: relative;
+  width: 100vw;
+  height: 200vh;
+  background-color: white;
+}
+.fotos h2 {
+  font-family: "Inter";
+  font-size: 5rem;
+  color: black;
+  max-width: 100%;
+}
+.fotos p {
+  font-family: "WorkSans";
+  font-size: 1rem;
+  color: black;
+  max-width: 80%;
+}
+.fotos .mainText {
+  position: absolute;
+  top: 20%;
+  right: auto;
+  left: 30%;
+  bottom: auto;
+  width: 40%;
+  height: auto;
+}
+.fotos .secondText {
+  position: absolute;
+  top: 70%;
+  right: auto;
+  left: 35%;
+  bottom: auto;
+  width: 25%;
+  height: auto;
+}
+.fotos .img1 {
+  position: absolute;
+  top: -5%;
+  right: 10%;
+  left: auto;
+  bottom: auto;
+  width: 22%;
+  height: auto;
+}
+.fotos .img2 {
+  position: absolute;
+  top: 8%;
+  right: auto;
+  left: 8%;
+  bottom: auto;
+  width: 20%;
+  height: auto;
+}
+.fotos .img3 {
+  position: absolute;
+  top: 30%;
+  right: 0;
+  left: auto;
+  bottom: auto;
+  width: 15%;
+  height: auto;
+}
+.fotos .img4 {
+  position: absolute;
+  top: 45%;
+  right: auto;
+  left: 25%;
+  bottom: auto;
+  width: 18%;
+  height: auto;
+}
+.fotos .img5 {
+  position: absolute;
+  top: 50%;
+  right: 30%;
+  left: auto;
+  bottom: auto;
+  width: 18%;
+  height: auto;
+}
+.fotos .img6 {
+  position: absolute;
+  top: auto;
+  right: auto;
+  left: 0;
+  bottom: 20%;
+  width: 15%;
+  height: auto;
+}
+.fotos .img7 {
+  position: absolute;
+  top: auto;
+  right: 15%;
+  left: auto;
+  bottom: -3%;
+  width: 25%;
+  height: auto;
+}
+
+.article01 {
+  width: 100vw;
+  height: 175vh;
+  background-color: black;
+}
+.article01 .articleText {
+  display: flex;
+  justify-content: space-between;
+  gap: 30%;
+  padding: 5%;
+}
+.article01 .articleText h3 {
+  font-family: "Inter";
+  font-size: 5rem;
+  color: white;
+  max-width: 100%;
+  line-height: 4.4rem;
+}
+.article01 .articleText p:first-of-type {
+  font-family: "WorkSans";
+  font-size: 1.5rem;
+  color: white;
+  max-width: 80%;
+  font-weight: 700;
+}
+.article01 .articleText p:last-of-type {
+  font-family: "WorkSans";
+  font-size: 1rem;
+  color: white;
+  max-width: 100%;
+  padding-top: 2%;
+}
+.article01 .articlePhotos {
+  height: 90vh;
+  position: relative;
+  z-index: 1;
+}
+.article01 .articlePhotos img:first-of-type {
+  position: absolute;
+  top: 10%;
+  right: auto;
+  left: 5%;
+  bottom: auto;
+  width: 55%;
+  height: auto;
+}
+.article01 .articlePhotos img:last-of-type {
+  position: absolute;
+  top: 25%;
+  right: 15%;
+  left: auto;
+  bottom: auto;
+  width: 30%;
+  height: auto;
+}
+.article01 .animation {
+  position: relative;
+  overflow: hidden;
+  background-color: white;
+  top: -10%;
+  height: 60vh;
+  padding: 0 0;
+}
+.article01 .animation img {
+  position: absolute;
+  top: -30%;
+  right: 5%;
+  left: auto;
+  bottom: auto;
+  width: 35%;
+  height: auto;
+  animation: rotate 5s linear infinite;
+  overflow: hidden;
+}
+
+.article02 {
+  width: 100vw;
+  height: 150vh;
+  background-color: #EEEEEE;
+  padding: 5%;
+}
+.article02 .articleText {
+  display: flex;
+  justify-content: space-between;
+  gap: 30%;
+}
+.article02 .articleText h3 {
+  font-family: "Inter";
+  font-size: 5rem;
+  color: black;
+  max-width: 100%;
+  line-height: 4.4rem;
+}
+.article02 .articleText p:first-of-type {
+  font-family: "WorkSans";
+  font-size: 1.5rem;
+  color: black;
+  max-width: 80%;
+  font-weight: 700;
+}
+.article02 .articleText p:last-of-type {
+  font-family: "WorkSans";
+  font-size: 1rem;
+  color: black;
+  max-width: 100%;
+  padding-top: 2%;
+}
+.article02 .articlePhotos {
+  height: 100vh;
+  position: relative;
+}
+.article02 .articlePhotos img:first-of-type {
+  position: absolute;
+  top: 10%;
+  right: 5%;
+  left: auto;
+  bottom: auto;
+  width: 55%;
+  height: auto;
+}
+.article02 .articlePhotos img:last-of-type {
+  position: absolute;
+  top: 25%;
+  right: auto;
+  left: 15%;
+  bottom: auto;
+  width: 30%;
+  height: auto;
+}
+
+footer {
+  position: relative;
+  height: 80vh;
+  background-color: black;
+  padding: 5% 5%;
+  overflow: hidden;
+}
+footer p {
+  font-family: "WorkSans";
+  font-size: 0.8rem;
+  color: white;
+  max-width: 70%;
+}
+footer .joinUs {
+  padding: 5% 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 20px;
+  align-items: flex-start;
+}
+footer .joinUs p:last-of-type {
+  font-family: "WorkSans";
+  font-size: 2rem;
+  color: white;
+  max-width: 40%;
+}
+footer .copyright {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+footer .copyright .social {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+footer .copyright .social p {
+  max-width: 100%;
+}
+footer .copyright .social .icons {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 5%;
+}
+footer .copyright .social .icons img {
+  width: 20px;
+}
+footer .parteners img {
+  height: 50px;
+  padding: 2%;
+}
+footer .banner {
+  position: absolute;
+  right: 30%;
+  width: 100vw;
+  background-color: #EEEEEE;
+  transform: translate(45%, 60%) rotate(45deg);
+}
+footer .banner h3 {
+  font-family: "Inter";
+  font-size: 3rem;
+  color: #AAAAAA;
+  max-width: 100%;
+  animation: movebanner 10s linear infinite;
+}
+footer .banner span {
+  text-shadow: 0 0 2px black, 0 0 2px black, 0 0 2px black, 0 0 2px black;
+  color: white;
 }
 
 /*# sourceMappingURL=style.css.map */
