--- a/assets/scss/_keyframes.scss
+++ b/assets/scss/_keyframes.scss
@@ -1,3 +1,4 @@
+// animation text move
 @keyframes movebanner {
 
     0% {
@@ -13,6 +14,7 @@
     }
 }
 
+// animation rotate
 @keyframes rotate {
 
     0% {
@@ -20,10 +22,10 @@
     }
 
     50% {
-        transform: rotate(360deg);
+        transform: rotate(180deg);
     }
 
     100% {
-        transform: rotate(0);
+        transform: rotate(360deg);
     }
 }
